--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>ngsite</title>
+    <title>导航页</title>
   </head>
   <body>
     <div id="app"></div>
